[tool.poetry]
name = "labsentinel"
version = "0.1.0"
description = "Hybrid laboratory data quality monitoring system using rule-based QC and unsupervised anomaly detection."
authors = ["Kacper Wawrzyniak"]
readme = "README.md"
packages = [{ include = "labsentinel", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.6.1"
great_expectations = "^1.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
ruff = "^0.11.5"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"